Create images directory and populate lagman.html

--- a/recipes/lagman.html
+++ b/recipes/lagman.html
@@ -7,5 +7,34 @@
 
     <body>
         <h1>lagman</h1>
+        <img src="/repos/odin-recipes/images/lagman.jpg" alt="a bowl of lagman">
+        
+        <h2>description</h2>
+        <p>lagman is a dish of meat, vegetables and pulled noodles from chinese and central asian cuisine.</p>
+
+        <h2>ingredients</h2>
+        <ul>
+            <li>2 tablespoons olive oil</li>
+            <li>1 onion, finely chopped</li>
+            <li>½ pound beef chuck, cut into strips</li>
+            <li>1 carrot, cut into thin strips</li>
+            <li>3 small potatoes, cubed</li>
+            <li>1 green bell pepper, cut into 1-inch strips</li>
+            <li>2 tablespoons tomato paste</li>
+            <li>8 cups water</li>
+            <li>2 teaspoons salt</li>
+            <li>½ cup finely chopped parsley</li>
+            <li>2 (8 ounce) packages thin Chinese noodles</li>
+            <li>3 large cloves garlic, minced</li>
+            <li>½ cup thinly sliced celery</li>
+        </ul>
+
+        <h2>steps</h2>
+        <ol>
+            <li>heat oil in a large pot over high heat. reduce heat to  medium-high; cook and stir onion in hot oil until golden, 3 to 5 minutes. stir in beef strips, cumin, and black pepper; cook until beef is browned, about 5 minutes. stir in tomato paste and cook for 2 to 3 minutes.</li>
+            <li>stir carrot into the pot; cook until coated with tomato paste, 2 to 3 minutes. add green bell pepper; cook for 1 minute. add potatoes and celery; cook for 5 minutes. pour in water; bring to a boil. season water with salt. Reduce heat to low and simmer soup until potatoes are soft, about 40 minutes.</li>
+            <li>stir parsley and garlic into the soup. simmer until garlic is soft, 10 to 15 minutes.</li>
+            <li>bring a large pot of lightly salted water to a boil. cook noodles in boiling water, stirring occasionally, until tender yet firm to the bite, 3 to 5 minutes. rinse and drain well. divide among serving bowls. Ladle hot soup over noodles.</li>
+        </ol>
     </body>
 </html>
