--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <body>
         <h1>odin recipes</h1>
         
-        <a href="recipes/lagman.html">lagman</a>
+        <ul>
+            <li><a href="recipes/lagman.html">lagman</a></li>
+            <li><a href="recipes/plov.html">plov</a></li>
+            <li><a href="recipes/ssmsa.html">samsa</a></li>
+        </ul>
     </body>
 </html>
