Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="recipes/lagman.html">lagman</a></li>
             <li><a href="recipes/plov.html">plov</a></li>
-            <li><a href="recipes/ssmsa.html">samsa</a></li>
+            <li><a href="recipes/samsa.html">samsa</a></li>
         </ul>
     </body>
 </html>
