Fix typo with relative links

--- a/recipes/lagman.html
+++ b/recipes/lagman.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>lagman</h1>
-        <img src="/repos/odin-recipes/images/lagman.jpg" alt="a bowl of lagman">
+        <img src="../images/lagman.jpg" alt="a bowl of lagman">
         
         <h2>description</h2>
         <p>lagman is a dish of meat, vegetables and pulled noodles from chinese and central asian cuisine.</p>
