--- a/recipes/plov.html
+++ b/recipes/plov.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>plov</h1>
-        <img src="/repos/odin-recipes/images/plov.jpg" alt="a plate of plov">
+        <img src="../images/plov.jpg" alt="a plate of plov">
 
         <h2>description</h2>
         <p>plov is a rice dish, which recipe usually involves cooking in stock, adding spices, and other ingredients such as vegetables or meat, and employing some technique for achieving cooked grains that do not adhere to each other.</p>
