--- a/recipes/samsa.html
+++ b/recipes/samsa.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>samsa</h1>
-        <img src="/repos/odin-recipes/images/samsa.jpg" alt="a plate of samsa">
+        <img src="../images/samsa.jpg" alt="a plate of samsa">
 
         <h2>description</h2>
         <p>samsa is a savoury pastry in central asian cuisines. it represents a bun stuffed with meat and sometimes with vegetables</p>
