Update README and index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>odin recipes</h1>
         
+        <h2>from Uzbekistan with love!</h2>
         <ul>
             <li><a href="recipes/lagman.html">lagman</a></li>
             <li><a href="recipes/plov.html">plov</a></li>
