Create styles.css and update index.html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>odin recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>odin recipes</h1>
         
-        <h2>from Uzbekistan with love!</h2>
-        <ul>
-            <li><a href="recipes/lagman.html">lagman</a></li>
-            <li><a href="recipes/plov.html">plov</a></li>
-            <li><a href="recipes/samsa.html">samsa</a></li>
-        </ul>
+        <div>
+            <h2>from Uzbekistan with love!</h2>
+            <ul>
+                <li><a href="recipes/lagman.html">lagman</a></li>
+                <li><a href="recipes/plov.html">plov</a></li>
+                <li><a href="recipes/samsa.html">samsa</a></li>
+            </ul>
+        </div>
     </body>
 </html>
