--- a/recipes/lagman.html
+++ b/recipes/lagman.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>lagman</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>lagman</h1>
+        <h1 class="header">lagman</h1>
         <img src="../images/lagman.jpg" alt="a bowl of lagman">
-        
-        <h2>description</h2>
+
+        <h2 class="header">description</h2>
         <p>lagman is a dish of meat, vegetables and pulled noodles from chinese and central asian cuisine.</p>
 
-        <h2>ingredients</h2>
+        <h2 class="header">ingredients</h2>
         <ul>
             <li>2 tablespoons olive oil</li>
             <li>1 onion, finely chopped</li>
@@ -29,7 +30,7 @@
             <li>½ cup thinly sliced celery</li>
         </ul>
 
-        <h2>steps</h2>
+        <h2 class="header">steps</h2>
         <ol>
             <li>heat oil in a large pot over high heat. reduce heat to  medium-high; cook and stir onion in hot oil until golden, 3 to 5 minutes. stir in beef strips, cumin, and black pepper; cook until beef is browned, about 5 minutes. stir in tomato paste and cook for 2 to 3 minutes.</li>
             <li>stir carrot into the pot; cook until coated with tomato paste, 2 to 3 minutes. add green bell pepper; cook for 1 minute. add potatoes and celery; cook for 5 minutes. pour in water; bring to a boil. season water with salt. Reduce heat to low and simmer soup until potatoes are soft, about 40 minutes.</li>
