Create plov.css and modify plov.html

--- a/recipes/plov.html
+++ b/recipes/plov.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>plov</title>
+        <link rel="stylesheet" href="plov.css">
     </head>
 
     <body>
-        <h1>plov</h1>
+        <h1 class="header">plov</h1>
         <img src="../images/plov.jpg" alt="a plate of plov">
 
-        <h2>description</h2>
+        <h2 class="header">description</h2>
         <p>plov is a rice dish, which recipe usually involves cooking in stock, adding spices, and other ingredients such as vegetables or meat, and employing some technique for achieving cooked grains that do not adhere to each other.</p>
 
-        <h2>ingredients</h2>
+        <h2 class="header">ingredients</h2>
         <ul>
             <li>2 cups rice</li>
             <li>4 heads garlic, whole</li>
@@ -24,7 +25,7 @@
             <li>2 tablespoons salt</li>
         </ul>
 
-        <h2>steps</h2>
+        <h2 class="header">steps</h2>
         <ol>
             <li>place rice in a large bowl and cover with warm water. set aside. wash heads of garlic. set aside.</li>
             <li>heat vegetable oil in a dutch oven or large skillet over high heat until smoking, then add lamb, turning occasionally until the lamb is evenly browned, about 10 minutes. stir in the onions; cook and stir until the onion has softened and browned, about 10 minutes. stir in the carrots; cook and stir until the carrots have softened, about 10 minutes. sprinkle with cumin, coriander, barberries, and peppercorns. drop whole garlic heads into the mixture, stirring to evenly distribute ingredients. reduce heat to medium. cover and cook for 30 minutes.</li>
