--- a/recipes/samsa.html
+++ b/recipes/samsa.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="en">
         <title>samsa</title>
+        <link rel="stylesheet" href="samsa.css">
     </head>
 
     <body>
-        <h1>samsa</h1>
+        <h1 class="header">samsa</h1>
         <img src="../images/samsa.jpg" alt="a plate of samsa">
 
-        <h2>description</h2>
+        <h2 class="header">description</h2>
         <p>samsa is a savoury pastry in central asian cuisines. it represents a bun stuffed with meat and sometimes with vegetables</p>
 
-        <h2>ingredients</h2>
+        <h2 class="header">ingredients</h2>
         <ul>
             <li>2 large potatoes, peeled</li>
             <li>2 tablespoons vegetable oil</li>
@@ -23,7 +24,7 @@
             <li>1 (16 ounce) package phyllo dough</li>
         </ul>
 
-        <h2>steps</h2>
+        <h2 class="header">steps</h2>
         <ol>
             <li>bring a medium saucepan of lightly salted water to a boil. stir in potatoes and peas; cook until potatoes are tender but still firm, about 15 minutes. drain, mash together, and set aside.</li>
             <li>meanwhile, heat 2 tablespoons oil in a large saucepan over medium-high heat. add cumin seeds and bay leaf; stir until fragrant and seeds are browned. add ground beef and onions; cook until beef is browned and crumbly and onions are soft, about 5 to 7 minutes.</li>
