--- a/recipes/plov.html
+++ b/recipes/plov.html
@@ -7,14 +7,16 @@
     </head>
 
     <body>
-        <h1 class="header">plov</h1>
+        <h1 id="title" class="header">plov</h1>
         <img src="../images/plov.jpg" alt="a plate of plov">
 
         <h2 class="header">description</h2>
-        <p>plov is a rice dish, which recipe usually involves cooking in stock, adding spices, and other ingredients such as vegetables or meat, and employing some technique for achieving cooked grains that do not adhere to each other.</p>
+        <div>
+            <p class="text">plov is a rice dish, which recipe usually involves cooking in stock, adding spices, and other ingredients such as vegetables or meat, and employing some technique for achieving cooked grains that do not adhere to each other.</p>
+        </div>
 
         <h2 class="header">ingredients</h2>
-        <ul>
+        <ul class="list">
             <li>2 cups rice</li>
             <li>4 heads garlic, whole</li>
             <li>½ cup vegetable oil</li>
@@ -26,7 +28,7 @@
         </ul>
 
         <h2 class="header">steps</h2>
-        <ol>
+        <ol class="list">
             <li>place rice in a large bowl and cover with warm water. set aside. wash heads of garlic. set aside.</li>
             <li>heat vegetable oil in a dutch oven or large skillet over high heat until smoking, then add lamb, turning occasionally until the lamb is evenly browned, about 10 minutes. stir in the onions; cook and stir until the onion has softened and browned, about 10 minutes. stir in the carrots; cook and stir until the carrots have softened, about 10 minutes. sprinkle with cumin, coriander, barberries, and peppercorns. drop whole garlic heads into the mixture, stirring to evenly distribute ingredients. reduce heat to medium. cover and cook for 30 minutes.</li>
             <li>wash and drain rice with hot water. pour cleaned rice over the lamb mixture in an even layer. slowly pour in the boiling water. the rice should be covered with about 3/4 inch of water. do not stir. season with salt, and reduce heat to medium-low. cover and cook until rice is tender, and the liquid has been absorbed, about 20 minutes. stir rice and lamb together, and serve with the garlic heads on top.</li>
