--- a/recipes/samsa.html
+++ b/recipes/samsa.html
@@ -7,14 +7,17 @@
     </head>
 
     <body>
-        <h1 class="header">samsa</h1>
+        <h1 id="title" class="header">samsa</h1>
         <img src="../images/samsa.jpg" alt="a plate of samsa">
 
         <h2 class="header">description</h2>
-        <p>samsa is a savoury pastry in central asian cuisines. it represents a bun stuffed with meat and sometimes with vegetables</p>
+        <div>
+            <p class="text">samsa is a savoury pastry in central asian cuisines. it represents a bun stuffed with meat and sometimes with vegetables</p>
+        </div>
+        
 
         <h2 class="header">ingredients</h2>
-        <ul>
+        <ul class="list">
             <li>2 large potatoes, peeled</li>
             <li>2 tablespoons vegetable oil</li>
             <li>1 pound ground beef</li>
@@ -25,7 +28,7 @@
         </ul>
 
         <h2 class="header">steps</h2>
-        <ol>
+        <ol class="list">
             <li>bring a medium saucepan of lightly salted water to a boil. stir in potatoes and peas; cook until potatoes are tender but still firm, about 15 minutes. drain, mash together, and set aside.</li>
             <li>meanwhile, heat 2 tablespoons oil in a large saucepan over medium-high heat. add cumin seeds and bay leaf; stir until fragrant and seeds are browned. add ground beef and onions; cook until beef is browned and crumbly and onions are soft, about 5 to 7 minutes.</li>
             <li>stir in garlic and ginger. season with salt, cumin, coriander, turmeric, chili powder, cinnamon, cardamom, and black pepper. stir in the mashed potato mixture. remove from heat and chill in the refrigerator for 1 hour, or until cool.</li>
