Add CSS properties to lagman.css

--- a/recipes/lagman.html
+++ b/recipes/lagman.html
@@ -7,14 +7,16 @@
     </head>
 
     <body>
-        <h1 class="header">lagman</h1>
+        <h1 id="title" class="header">lagman</h1>
         <img src="../images/lagman.jpg" alt="a bowl of lagman">
 
         <h2 class="header">description</h2>
-        <p>lagman is a dish of meat, vegetables and pulled noodles from chinese and central asian cuisine.</p>
+        <div>
+            <p class="text">lagman is a dish of meat, vegetables and pulled noodles from chinese and central asian cuisine.</p>
+        </div>
 
         <h2 class="header">ingredients</h2>
-        <ul>
+        <ul class="list">
             <li>2 tablespoons olive oil</li>
             <li>1 onion, finely chopped</li>
             <li>½ pound beef chuck, cut into strips</li>
@@ -31,7 +33,7 @@
         </ul>
 
         <h2 class="header">steps</h2>
-        <ol>
+        <ol class="list">
             <li>heat oil in a large pot over high heat. reduce heat to  medium-high; cook and stir onion in hot oil until golden, 3 to 5 minutes. stir in beef strips, cumin, and black pepper; cook until beef is browned, about 5 minutes. stir in tomato paste and cook for 2 to 3 minutes.</li>
             <li>stir carrot into the pot; cook until coated with tomato paste, 2 to 3 minutes. add green bell pepper; cook for 1 minute. add potatoes and celery; cook for 5 minutes. pour in water; bring to a boil. season water with salt. Reduce heat to low and simmer soup until potatoes are soft, about 40 minutes.</li>
             <li>stir parsley and garlic into the soup. simmer until garlic is soft, 10 to 15 minutes.</li>
